Fixed line breaks in code (resolves budparr/gohugo-theme-ananke#56). (#57)

--- a/src/css/_code.css
+++ b/src/css/_code.css
@@ -8,7 +8,7 @@ pre, .pre  {
 pre  code {
   display: block;
   padding: 1.5em 1.5em;
-  white-space: normal;
+  white-space: pre;
   font-size: .875rem;
   line-height: 2;
 
